[tool.poetry]
name = "repl-nix-tibberp1integration"
version = "0.1.0"
description = ""
authors = ["Tibber P1 Integration <tibber.p1.integration@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tibber = "^0.16.0"
voluptuous = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
